# scholar_search

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  server.py
scholar_search/: __init__.py  analysis.py  bing_search.py  config.py  search.py  viz.py
scripts/: batch_search.py
tests/: test_analysis.py  test_batch_search.py  test_bing_search.py  test_config.py  test_search.py  test_server.py  test_viz.py
