[project]
name = "scholar-search-mcp"
version = "0.1.0"
description = "Google Scholar MCP Server with relevance analysis"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
]

[project.scripts]
scholar-search-mcp = "server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scholar_search*"]

[tool.scholar-search]
# 默认代理地址（优先级最低，会被环境变量覆盖）
proxy = "http://localhost:7890"

[tool.coverage.run]
source = ["scholar_search", "server"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--ignore=tests/test_search.py --cov=scholar_search --cov=server --cov-report=term-missing --cov-report=xml -v"

[tool.flake8]
max-line-length = 127
extend-ignore = []
exclude = [".git", "__pycache__", ".pytest_cache", "*.egg-info"]
